--- a/templates/message_board/advertisement_create.html
+++ b/templates/message_board/advertisement_create.html
@@ -1,15 +1,33 @@
 {% extends 'base.html' %}
- 
+{% load static %}
+
 {% block head_title %}
 Advertisement
 {% endblock head_title %}
  
 {% block content %}
    <h1>Объявление</h1> <br>
-
-    <form method="POST">
+    <div class="container">
+    <h2 class="mb-5">Добавление записи:</h2>
+    <form method="post" class="row g-3">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Создать объявление">
+        <div class="col-md-4">
+          {{ form.category.label_tag }}
+          {{ form.category }}
+        </div>
+        <div class="col-8">
+            {{ form.title.label_tag }}
+            {{ form.title }}
+        </div>
+            {{ form.content.label_tag }}
+            {{ form.content }}
+        <div class="col-12">
+            {{ form.media }}
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary">Добавить</button>
+        </div>
     </form>
+</div>
+
 {% endblock content %}
