--- a/templates/message_board/advertisements.html
+++ b/templates/message_board/advertisements.html
@@ -6,61 +6,47 @@ Advertisement
 {% endblock head_title %}
  
 {% block content %}
-    <form method="GET">
-        {{ filter.form }} <!-- Форму от фильтров за нас сделает Django. А вот кнопку, увы придётся делать самому -->
-        <input type="submit" value="Найти">
-    </form>
     <h1>Все объявления</h1> <br>
     <caption>
-        Всего объявлений: {{ filter.qs|length }}
+        Всего объявлений: {{ advertisements|length }}
     </caption>
     {% if advertisements %}
-       {% for advertisement in filter.qs %}
+       {% for advertisement in advertisements %}
            <h2><a href="{%url 'advertisement_single' pk=advertisement.id %}">{{ advertisement.title }}</a> </h2><br>
             {{ advertisement.created }} <br>
             <h4>{{ advertisement.category.name }} <br></h4>
             <h4>{{ advertisement.author }} <br></h4>
             {{ advertisement.updated }} <br>
 
-            <form method="POST">
-                {% csrf_token %}
-                {{ advertisement_now }} = {{ advertisement }}
-
-                <label for="text">Text</label>
-                <input name="text">
-
-                <!-- Здесь будет список категорий.  -->
-                <input type="submit" value="Оставить отклик">
-            </form>
-
     {% endfor %}
    {% else %}
        <h2>Объявлений нет!</h2>
    {% endif %}
+    <br>
 
     <a href="{% url 'advertisement_create' %}">Создать объявление</a>
     <br>
 
     {% if is_paginated %}
 
-    {% if page_obj.has_previous %}
-        <a href="?page=1{{ request.get_full_path|is_filters_uses }}">&laquo; First</a>
-        <a href="?page={{ page_obj.previous_page_number }}{{ request.get_full_path|is_filters_uses }}"><<<</a>
-    {% endif %}
-
-    {% for num in page_obj.paginator.page_range %}
-        {% if page_obj.number == num %}
-            <a>{{ num }}</a>
-        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-            <a href="?page={{ num }}{{ request.get_full_path|is_filters_uses }}">{{ num }}</a>
+        {% if page_obj.has_previous %}
+            <a href="?page=1">First</a>
+            <a href="?page={{ page_obj.previous_page_number }}"><<<</a>
         {% endif %}
-    {% endfor %}
 
-    <!-- Если есть следующая страница, то даём ссылку на неё и на самую последнюю страницу -->
-    {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}{{ request.get_full_path|is_filters_uses }}">>>></a>
-        <a href="?page={{ page_obj.paginator.num_pages }}{{ request.get_full_path|is_filters_uses }}">Last &raquo;</a>
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a>{{ num }}</a>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <a href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">>>></a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+
     {% endif %}
 
-    {% endif %}
 {% endblock content %}
